# services-smart-contract

./: Cargo.toml
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: empty.scen.json
src/: empty.rs
tests/: empty_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
